EBNF/EBNF.txt
// EXPRESSIONS - Выражения
// STATEMENTS - Инструкции
// DECLARATIONS - Объявления

<program> ::= <statement>

<statement> ::= <compound_statement> | <declaration> | <expression>, ";"
				| <selection_statement> | <set> | <cycle_for>

<declaration> ::= "let", "mut", <identifier>, ";"

<set> ::= <identifier>, "=", <expression>, ";"

<compound_statement> ::= "{", <statement>, "}"

<selection_statement> ::= "if", <expression>, <compound_statement>,
						 ["else", <compound_statement>]

<cycle_for> ::= "for", <identifier>, "in", <additive_expression>, "..",
			  <additive_expression>, <compound_statement>

<expression> ::= <additive_expression>

<additive_expression> ::= <multiplicative_expression> 
                        | <multiplicative_expression> "+" <additive_expression>
                        | <multiplicative_expression> "-" <additive_expression>

<multiplicative_expression> ::= <primary_expression> 
                              | <primary_expression> "*" <multiplicative_expression>
                              | <primary_expression> "/" <multiplicative_expression>

<primary_expression> ::= <number> | <identifier> | <parenthesized_expression>

<parenthesized_expression> ::= "(", <expression>,")"

<number> ::= число

<identifier> ::= название переменной
